pass back to Nolan

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -137,6 +137,43 @@
   publisher={Academic Press}
 }
 
+@incollection{goldstone2003,
+	Address = {Mahwah, NJ},
+	Author = {R. L. Goldstone},
+	Booktitle = {Perceptual {O}rganization in {V}ision: Behavioral and {N}eural {P}erspectives},
+	Editors = {R. Kimchi and M. Behrmann and C. Olson},
+	Pages = {233-278},
+	Publisher = {Lawrence Erlbaum Associates},
+	Title = {Learning to perceive while perceiving to learn},
+	Year = {2003}}
+
+@article{regier2007,
+  author = {T. Regier and P. Kay and N. Khetarpal},
+  title = {Color naming reflects optimal partitions of color space},
+  journal = {Proceedings of the National Academy of Sciences},
+  year = {2007},
+  volume = {104},
+  number = {4},
+  pages = {1436--1441}
+}
+
+@book{wyszecki1967,
+  author = {G. Wyszecki and W. S. Stiles},
+  title = {Color Science},
+  publisher = {John Wiley},
+  address = {New York},
+  year = {1967}
+}
+
+@article{roschmervis1975,
+	Author = {E. Rosch and C. B. Mervis},
+	Journal = {Cognitive Psychology},
+	Pages = {573-605},
+	Title = {Family resemblances: Studies in the internal structure of categories},
+	Volume = {7},
+	Year = {1975}}
+
+
 @article{mack2013,
   author = {M. L. Mack and A. R. Preston and B. C. Love},
   title = {Decoding the brain's algorithm for categorization from its neural implementation},
