--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -276,13 +276,13 @@ To evaluate the role of contrast, we computed the number of times each stimulus 
 \end{figure}
 
 
-Figure \ref{fig:e1-distanceplots} also depicts, for each participant, the average distance of members within the generated category ({\em within-category} distance) against the average distance between members of the generated and experimenter-defined category ({\em between-category} distance). These data also reveal a systematic pattern: the majority of participants generated categories with more between-category distance than within-category distance. That is, members of the generated category tended to be more similar to one another than to members of the experimenter-defined category. To formally evaluate this claim, we conducted t-tests comparing the amount of within- and between- class distance in each condition. All conditions possessed greater between-category distance: Cluster, $t(63) = 11.43$, $p < 0.001$; Row, $t(60) = 13.16$, $p < 0.001$; and XOR, $t(57) = 3.64$, $p < 0.001$. The narrow distribution of between-category distances in the XOR condition reflects the widely distributed nature of the experimenter-defined category: all possible generation candidates are distant from at least one cluster of the experimenter-defined category. These results provide clear evidence of an effect of category contrast: participants prefer to generate categories that are dissimilar to the learned category but maintain some level of internal cohesion. 
+Figure \ref{fig:e1-distanceplots} also depicts, for each participant, the average distance of members within the generated category ({\em within-category} distance) against the average distance between members of the generated and experimenter-defined category ({\em between-category} distance). The narrow distribution of between-category distances in the XOR condition reflects the widely distributed nature of the experimenter-defined category: all possible generation candidates are distant from at least one cluster of the experimenter-defined category. These data reveal a systematic pattern: the majority of participants generated categories with more between-category distance than within-category distance. That is, members of the generated category tended to be more similar to one another than to members of the experimenter-defined category. To formally evaluate this claim, we conducted t-tests comparing the amount of within- and between- class distance in each condition. All conditions possessed greater between-category distance: Cluster, $t(63) = 11.43$, $p < 0.001$; Row, $t(60) = 13.16$, $p < 0.001$; and XOR, $t(57) = 3.64$, $p < 0.001$.  These results provide clear evidence of an effect of category contrast: participants prefer to generate categories that are dissimilar to the learned category but maintain some level of internal cohesion. 
 
 A secondary goal of this experiment was to examine whether we replicate the classic result that generated categories often possess the same distributional properties as previously-known categories. For each generated category, we computed the category range along each axis (X, Y), as well as the correlation between features. These data, shown in Figure \ref{fig:e1-statsboxes}, reveal broad individual differences: within each condition, participants generated categories spanning the entire X- and Y- axis as well as categories that spanned very little along each. Likewise, in each condition participants generated categories possessing strongly positive, neutral, and strongly negative correlations between the dimensions. Comparing the distributional statistics between conditions yields a broad-yet-misleading replication of the classic effect. 
 
 With respect to ranges along each axis (X, Y), the generated categories from each condition tend to reflect the ranges of the experimenter-defined categories. The categories generated in the Cluster condition were less widely distributed along the X-axis compared to Row, $t(123) = 5.61$, $p < 0.001$, and XOR, $t(120) = 2.68$, $p = 0.008$. Categories generated in the XOR condition were also less widely distributed along the X-axis compared to Row, $t(117) = 2.56$, $p = 0.012$. This latter effect was not expected; however, the key finding is that categories from the Cluster condition tended to be more tightly distributed along the X-axis.
-\jlanote{Was XOR slightly longer than row?}
-Likewise, categories generated in the Row condition had less Y-axis range compared to Cluster, $t(123) = 4.57$, $p < 0.001$ and XOR, $t(117) = 9.26$, $p < 0.001$, and categories from the Cluster condition had less Y-axis range compared to XOR, $t(120) = 3.95$, $p < 0.001$. As expected, the correlations in the Cluster and Row conditions were not systematically positive or negative ($ps > 0.1$). However, the generated categories in the XOR condition tended to possess {\em negatively} correlated dimensions, $t(57) = 2.04$, $p = 0.046$. This finding is notable, as it is the opposite of what would be expected, assuming learners are emulating the distributional structure of the experimenter-defined class (which possesses perfectly positively correlated features). Thus, there is more to category generation than the distributional structure of other categories in the domain! Further, as we will discuss in more detail in the model-based analysis section, it is expected by our proposal that contrast is a fundamental principle for category generation.
+
+Likewise, categories generated in the Row condition had less Y-axis range compared to Cluster, $t(123) = 4.57$, $p < 0.001$ and XOR, $t(117) = 9.26$, $p < 0.001$, and categories from the Cluster condition had less Y-axis range compared to XOR, $t(120) = 3.95$, $p < 0.001$. As expected, the correlations in the Cluster and Row conditions were not systematically positive or negative ($ps > 0.1$). However, the generated categories in the XOR condition tended to possess {\em negatively} correlated dimensions, $t(57) = 2.04$, $p = 0.046$. This finding is notable, as it is the opposite of what would be expected, assuming learners are emulating the distributional structure of the experimenter-defined class (which possesses perfectly positively correlated features). This indicates that there is more to category generation than the distributional structure of other categories in the domain. Further, as we will discuss in more detail in the model-based analysis section, it is expected by our proposal that contrast is a fundamental principle in category generation.
 
 \begin{figure}
     \begin{center}
@@ -304,7 +304,8 @@ Thus, while the core results of Experiment 1 indicate that generated categories 
 
 
 \section{Experiment 2}
-To test whether category contrast influences the distributional structure of generated categories, we created two new category types (depicted in Figure ~\ref{fig:e2-conditions}) that do not differ in distributional structure, but we expect participants would generate different categories given each of them. The observed categories possess an identical distributional structure (both are tight clusters of examples with a neutral feature correlation), and only differ slightly in their Y-axis position: the `Bottom' category lies in the bottom-center of the space, and the `Middle' category lies in the center. The distributional equality of these conditions is key to the design of the experiment: if the structure of previously learned categories were the only influence on the structure of generated categories, we should observe no difference between these two conditions with respect to distributional structure.
+
+In order to test whether category contrast influences the distributional structure of generated categories, we sought to identify conditions in which differences in the distributional structure of generated categories cannot be explained by the distributional structure of the experimenter-defined category. We created two new category types (depicted in Figure ~\ref{fig:e2-conditions}) that possess an identical distributional structure (both are tight clusters of examples with a neutral feature correlation), and only differ slightly in their Y-axis position: the `Bottom' category lies in the bottom-center of the space, and the `Middle' category lies in the center. The distributional equality of these conditions is key to the design of the experiment: if the structure of previously learned categories were the only influence on the structure of generated categories, we should observe no difference between these two conditions with respect to distributional structure.
 
 \begin{figure}
     \begin{center}
@@ -314,8 +315,7 @@ To test whether category contrast influences the distributional structure of gen
     \end{center}
 \end{figure}
 
-
-Alternatively, participants seeking to make a perceptually distinct category would be more likely to distribute members of the generated category into areas that are distant from members of known categories. Thus, if category contrast influences the distributional structure of the categories people generate, then we should observe different types of categories according to the shape of the space that is unoccupied by members of previously learned categories. The difference in the Y-axis position between the Bottom and Middle types produces a considerable change to the shape of the unoccupied space: participants assigned to learn the Bottom category would be less likely to generate exemplars into the lower regions of the stimulus space (as these areas possess greater similarity to members of the Bottom category), preferring instead to distribute exemplars across the upper region of the space. This constraint is lifted in the Middle condition, as the Middle category exemplars are equidistant to the upper and lower regions of the space. Accordingly, participants should be more likely to utilize both of these areas. Thus, to the extent that category contrast influences distributional structure, we should observe more participants in the Middle condition that generate examples above {\em and} below the experimenter-defined category.
+Critically, however, participants seeking to make a perceptually distinct category would be more likely to distribute members of the generated category into areas that are distant from members of known categories. Thus, if category contrast influences the distributional structure of the categories people generate, then we should observe different types of categories according to the shape of the space that is unoccupied by members of previously learned categories. The difference in the Y-axis position between the Bottom and Middle types produces a considerable change to the shape of the unoccupied space: participants assigned to learn the Bottom category would be less likely to generate exemplars into the lower regions of the stimulus space (as these areas possess greater similarity to members of the Bottom category), preferring instead to distribute exemplars across the upper region of the space. This constraint is lifted in the Middle condition, as the Middle category exemplars are equidistant to the upper and lower regions of the space. Accordingly, participants should be more likely to utilize both of these areas. Thus, to the extent that category contrast influences distributional structure, we should observe more participants in the Middle condition that generate examples above {\em and} below the experimenter-defined category.
 
 \subsection{Participants, Materials, \& Procedure}
 
@@ -346,11 +346,30 @@ We began our analysis by again testing for the broad influence of category contr
 
 We did, however, observe a notable subgroup of participants in each condition who generated categories with more within-category than between-category distance. Upon manual inspection, many of these individuals appear to have assumed a `Corners' strategy, placing exemplars in disparate corners of the space, thus producing much more within-category distance, see Figure \ref{fig:e2-samples} for examples.
 
-\nbcnote{ Weak spot: the obvious next analysis here would involve the same box-and-whisker plot as in Experiment 1. We ran this analysis but the conditions did not differ in Y-range due to the data being weirdly distributed. I've included the box-and-whisker plot, as well as the graph-of-many-lines figure, on a separate page at the end.}
+To address out main question, we followed this analysis by comparing the conditions on measures of distributional structure. For each generated category, we computed the range of exemplars along each axis (X, Y), as well as the correlation between features. These data, shown in Figure \ref{fig:e2-statsboxes}, again demonstrate the degree of individual differences observed in our study: in each condition, we observed tightly clustered and widely distributed categories along each dimension, as well as positively, negatively, and uncorrelated categories. 
 
-\jlanote{I think we should show and explain that corner behavior mess it up (or whatever the reason is why it happens). I think it is more suspicious to not show it and from what I remember, it doesn't really affect our hypotheses.}
+\begin{figure}
+    \begin{center}
+    \inputpgf{figs/}{e2-statsboxes.pgf}
+    \caption{Box-plots of the distributional statistics from the categories generated in Experiment 2. }
+    \label{fig:e2-statsboxes}
+    \end{center}
+\end{figure}
 
-Because the conditions differ only in the Y-axis position of the experimenter-defined category, we then compared the conditions in terms of the frequency with which participants generated examples above and below the categories. Specifically, we counted the number of participants in each condition who placed at least one `Beta' exemplar on the top and bottom `rows' of the space (the maximum and minimum possible y-axis value, respectively). The resulting contingencies data are shown in Table \ref{table:e2-subset-table}. 
+
+As noted above, if the distributional structure of generated categories is influenced by the shape of the space not occupied by members of known categories, then participants in the Middle condition would be more likely to place exemplars in the upper {\em and} lower regions of the space, as members of the experimenter-defined category are equidistant from these regions. Participants in the Bottom condition should in turn be less likely to generate category members in the bottom regions because members of the experimenter-defined category are located there. These predictions can be addressed within the Y-axis ranges of the generated categories: If Middle participants utilize the upper and lower regions of the space, their categories should vary more along the Y-axis. T-Tests comparing the conditions on the distributional statistics, however, reveal few between-group differences: the conditions do not differ with respect to X-axis range, Y-axis range, or feature correlations ($ps>0.17$).
+
+However, our ability to detect differences between the conditions is, in this case, diminished due to the non-normality of the data. Figure \ref{fig:e2-yranges} depicts the Y-axis position of the exemplars generated within each participant's category. The categories are sorted by overall range, then by condition assignment. These data reveal that there were nearly as many participants who generated categories spanning the entire Y-axis as those who generated categories spanning almost none of the Y-axis. The non-normality of the Y-axis range distributions thus requires that we use a different approach to addressing the experiment's main question.
+
+\begin{figure}
+    \begin{center}
+    \inputpgf{figs/}{e2-yranges.pgf}
+    \caption{Y-Axis range and position of the categories generated in Experiment 2. Each line corresponds to a single category, with notches corresponding to the Y-axis position of exemplars within the category (notches may overlap). Data from each participant is sorted by overall range, and then by condition. }
+    \label{fig:e2-yranges}
+    \end{center}
+\end{figure}
+
+Because our main prediction concerns the generation of exemplars within the upper and lower regions of the domain, we compared the conditions in terms of the frequency with which participants generated examples above and below the categories. Specifically, we counted the number of participants in each condition who placed at least one `Beta' exemplar on the top and bottom `rows' of the space (the maximum and minimum possible y-axis value, respectively). The resulting contingencies data are shown in Table \ref{table:e2-subset-table}. 
 
 \begin{table}
 \begin{center} 
